--- a/receiver/package.json
+++ b/receiver/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/armanheidarii/covert-channel/issues"
   },
-  "homepage": "https://github.com/armanheidarii/covert-channel#readme"
+  "homepage": "https://github.com/armanheidarii/covert-channel#readme",
+  "dependencies": {
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0"
+  }
 }
