--- a/receiver/package.json
+++ b/receiver/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/armanheidarii/covert-channel#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   }
