--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules
 .env
 1709670245_402__HW1-FundamentalsOfCyberSecurity-SBU-MRazian-14021215-v1.0.pdf
+HW1-Security-ArmanChamHeidari-99243030.pdf
